# sequential

./: .gitignore  Cargo.toml  README.md  Rocket.toml  environment.yml
migrations/2020-09-16-125456_initial_schema/: down.sql  up.sql
migrations/2020-09-18-010710_text_to_varchar/: down.sql  up.sql
migrations/2020-09-19-100104_add_lives/: down.sql  up.sql
migrations/2020-09-25-123416_add_scores/: up.sql
src/: db.rs  hand.rs  main.rs  models.rs  nccmn_spider.py  schema.rs  scraper.py  utils.rs
src/data/: insert_sample_events.sql
static/css/: main.css
static/js/: game.js
temp/: create_sample_db.sql  get_events_from_hand.sql  populate_events.sql
temp/trash/: cards.js  old_base.tera  old_game.tera  style.css
templates/: _base.tera  about.tera  game.tera  index.tera
