[package]
name = "sequential"
version = "0.2.0"
authors = ["Lucien Rae Gentil <lucienraegentil@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.5"
serde_json = "1.0.57"
dotenv = "0.15.0"
rand = "0.7.3"

[dependencies.diesel]
version = "1.4.4"
features = ["postgres"]

[dependencies.serde]
version = "1.0.116"
features = ["derive"]

[dependencies.rocket_contrib]
version = "0.4.5"
default-features = false
features = ["tera_templates", "serve"]
